Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8167000/T8167000b.out
T8167000b.java:18:26: compiler.err.unreported.exception.need.to.catch.or.throw: T
1 error
